Fix rating in tutor profile edit, fix green color contrast, fix register inputs to allow tildes

--- a/src/assets/styles/pages/TutorViewProfile.scss
+++ b/src/assets/styles/pages/TutorViewProfile.scss
@@ -3,7 +3,7 @@
 $subtitle-color: #5b5b5b;
 $title-color: #3f3f3f;
 $color-a: #22b8d9;
-$color-b: #0de26f;
+$color-b: #33df63;
 
 * {
   margin: 0;
