--- a/src/assets/styles/pages/TutorsSchedule.scss
+++ b/src/assets/styles/pages/TutorsSchedule.scss
@@ -4,11 +4,10 @@
 $primary-color: #22b8d9;
 $secondary-color: #ffffff;
 $primary-color-dark: #1a90aa;
-$color-b: #0de26f;
+$color-b: #33df63;
 $subtitle-color: #5b5b5b;
 $title-color: #3f3f3f;
 $color-a: #22b8d9;
-$color-b: #0de26f;
 $font-weight: 400;
 $font-selected-weight: 800;
 $border-width: 2px;
